<resources>
    <string name="app_name">SchoolHouse</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password (6 characters and above) </string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LOGIN</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_school_house_app">Hi there, I\'m using School House App.</string>
    <string name="open" />
    <string name="close" />
    <string name="request_sent">Req Sent</string>
    <string name="pick_the_date_time"><![CDATA[Pick the Date & Time:]]></string>
    <string name="back"><![CDATA[<< Back]]></string>
</resources>
